--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -93,6 +93,46 @@
         "subheadingBold": "it is the most important part",
         "subheadingPart2": "to put key information that your future clients will be searching for.",
         "inputValidation": "Title is required for Gig creation"
+      },
+      "category": {
+        "heading": "Category",
+        "subheadingPart1": "Pick the right ",
+        "subheadingBold": "category ",
+        "subheadingPart2": "for your gig.",
+        "inputValidation": "Category required",
+        "selectPlaceholder": "Choose a category"
+      },
+      "searchTags": {
+        "heading": "Search Tags",
+        "subheading": "Label your gig with keywords that are relevant to the services you offer. Use up to 5 keywords to stand out.",
+        "keywordsHeading": "Positive Keywords",
+        "keywordsSubheading":"Enter the keywords you think your buyers will use when searching for your service.",
+        "tagsPlaceholder":"Type something..."
+      },
+      "deleteButton":"Delete Gig",
+      "nextButton":"Save & Continue"
+    },
+    "Pricing": {
+      "title": "Scope & Price",
+      "packageSwitcher": "Offer packages",
+      "packagesTable": {
+        "basic": "basic",
+        "standard": "standard",
+        "premium": "premium",
+        "title": "Title ",
+        "description": "Description",
+        "delivery": "Delivery Time",
+        "revisions": "Number of Revisions",
+        "price": "Price",
+        "placeholders": {
+          "title": "package ",
+          "descriptionPart1": "Describe your ",
+          "descriptionPart2": " package here...",
+          "delivery": "days",
+          "revisions": "revisions"
+        },
+        "nextButton":"Save & Continue",
+        "backButton":"Back"
       }
     }
   }
