--- a/i18n/locales/pt.json
+++ b/i18n/locales/pt.json
@@ -79,7 +79,7 @@
       "marketing": "Marketing"
     },
     "SloganSuffix": "adequado para si",
-    "SearchPlaceholder": "Procurar por serviços",
+    "SearchPlaceholder": "Pesquise os nossos serviços",
     "CategoryHero": {
       "title": "Categorias em destaque"
     },
