Enhanced UX for mobile users - enabled search bar in hero section of mobile app - added links to search page in mobileNav - added search bar to mobile search page

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -16,6 +16,7 @@
       "navLinks": {
         "login": "Login",
         "explore": "Categories",
+        "search": "Search",
         "generalSeparator": "General",
         "home": "Home"
       }
@@ -30,6 +31,7 @@
         "home": "Home",
         "inbox": "Inbox",
         "orders": "Orders",
+        "search": "Search",
         "gigs": "Gigs",
         "explore": "Categories",
         "generalSeparator": "General",
